--- a/Gestion_AcademicoAdministrativa_Abastos/BuscadorV2.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/BuscadorV2.xaml
@@ -66,7 +66,7 @@
                         </Grid>
                         <DataGrid x:Name="DataGridResult" Grid.Row="5" AutoGenerateColumns="True" ColumnWidth="Auto">
                             <DataGrid.ContextMenu>
-                                <ContextMenu>
+                                <ContextMenu x:Name="DataGridContextMenu">
                                     <MenuItem x:Name="QueryEntry" Header="Consultar Ficha" Click="QueryEntry_Click" />
                                 </ContextMenu>
                             </DataGrid.ContextMenu>
