--- a/Gestion_AcademicoAdministrativa_Abastos/styles/ContextMenu.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/styles/ContextMenu.xaml
@@ -33,6 +33,11 @@
         <Setter Property="Foreground" Value="{DynamicResource MainColorSolid}" />
         <Setter Property="Margin" Value="5" />
         <Setter Property="FontWeight" Value="Bold" />
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Cursor" Value="Hand" />
+            </Trigger>
+        </Style.Triggers>
     </Style>
     <ContextMenu x:Key="ContextMenuTextBox">
         <MenuItem Header="Deshacer" Command="ApplicationCommands.Undo"/>
