--- a/Gestion_AcademicoAdministrativa_Abastos/CustomElements/Notification.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/CustomElements/Notification.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Gestion_AcademicoAdministrativa_Abastos"
         xmlns:properties="clr-namespace:Gestion_AcademicoAdministrativa_Abastos.Properties"
-        mc:Ignorable="d"
+        mc:Ignorable="d" Topmost="True"
         AllowsTransparency="True" WindowStyle="None" Background="Transparent"
         Title="Notification" Height="450" Width="800"
         Closing="Window_Closing" Loaded="Window_Loaded">
