--- a/Gestion_AcademicoAdministrativa_Abastos/Formularios/FichaPersona.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/Formularios/FichaPersona.xaml
@@ -33,7 +33,7 @@
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="5*" />
-                        <RowDefinition Height="10*" />
+                        <RowDefinition Height="7.5*" />
                         <RowDefinition Height="5*" />
                         <RowDefinition Height="75*" />
                         <RowDefinition Height="5*" />
@@ -50,7 +50,6 @@
                     </Grid>
                     <TabControl Grid.Column="1" Grid.Row="3" x:Name="TabViews">
                         <TabItem Header="Datos Personales">
-
                             <Grid Grid.Column="1" Grid.Row="1" x:Name="CreationContentPanel"
                                   Background="{DynamicResource BackgroundContainerGradient}">
                                 <Grid.ColumnDefinitions>
@@ -59,6 +58,8 @@
                                     <ColumnDefinition  Width="5*"/>
                                 </Grid.ColumnDefinitions>
                                 <Grid.RowDefinitions>
+                                    <RowDefinition Height="5*" />
+                                    <RowDefinition Height="15*" />
                                     <RowDefinition Height="5*" />
                                     <RowDefinition Height="15*" />
                                     <RowDefinition Height="5*" />
@@ -154,9 +155,7 @@
                                 </Grid>
                                 <Grid Grid.Row="5" Grid.Column="1">
                                     <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="35*" />
-                                        <ColumnDefinition Width="15*" />
-                                        <ColumnDefinition Width="50*" />
+                                        <ColumnDefinition Width="100*" />
                                     </Grid.ColumnDefinitions>
                                     <Grid.RowDefinitions>
                                         <RowDefinition Height="50*" />
@@ -177,20 +176,21 @@
                                             </Style>
                                         </TextBlock.Style>
                                     </TextBlock>
-                                    <Label Content="{DynamicResource FormPersonaTelefono}" Grid.Column="2"/>
-                                    <TextBox Grid.Column="2" x:Name="TxtTelefono" Grid.Row="1" />
-                                    <TextBlock Grid.Column="2" Grid.Row="1" Text="{DynamicResource FormPersonaTelefonoExample}" >
-                                        <TextBlock.Style>
-                                            <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource PlaceHolderContent}">
-                                                <Setter Property="Visibility" Value="Collapsed"/>
-                                                <Style.Triggers>
-                                                    <DataTrigger Binding="{Binding Text, ElementName=TxtTelefono}" Value="">
-                                                        <Setter Property="Visibility" Value="Visible"/>
-                                                    </DataTrigger>
-                                                </Style.Triggers>
-                                            </Style>
-                                        </TextBlock.Style>
-                                    </TextBlock>
+                                </Grid>
+                                <Grid Grid.Row="7" Grid.Column="1">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="30*" />
+                                        <ColumnDefinition Width="5*" />
+                                        <ColumnDefinition Width="30*" />
+                                        <ColumnDefinition Width="5*" />
+                                        <ColumnDefinition Width="30*" />
+                                    </Grid.ColumnDefinitions>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="100*" />
+                                    </Grid.RowDefinitions>
+                                    <Button Content="{StaticResource FormPersonaCreateButton}" Grid.Column="0"/>
+                                    <Button Content="{StaticResource FormPersonaModifyButton}" Grid.Column="2"/>
+                                    <Button Content="{StaticResource FormPersonaRemoveButton}" Grid.Column="4"/>
                                 </Grid>
                             </Grid>
                         </TabItem>
