--- a/Gestion_AcademicoAdministrativa_Abastos/CustomElements/ConfirmNotification.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/CustomElements/ConfirmNotification.xaml
@@ -38,8 +38,8 @@
                 <RowDefinition Height="90*" />
                 <RowDefinition Height="5*" />
             </Grid.RowDefinitions>
-            <Button Content="Confirmar" Grid.Column="1" Grid.Row="1" Style="{StaticResource MenuButton}"/>
-            <Button Content="Cancelar" Grid.Column="2" Grid.Row="1" Style="{StaticResource CloseButton}"/>
+            <Button x:Name="Confirm" Content="Confirmar" Grid.Column="1" Grid.Row="1" Style="{StaticResource MenuButton}" Click="Confirm_Click"/>
+            <Button x:Name="Cancel" Content="Cancelar" Grid.Column="2" Grid.Row="1" Style="{StaticResource CloseButton}" Click="Cancel_Click"/>
         </Grid>
     </Grid>
 </Window>
