--- a/Gestion_AcademicoAdministrativa_Abastos/CustomElements/ConfirmNotification.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/CustomElements/ConfirmNotification.xaml
@@ -39,7 +39,7 @@
                 <RowDefinition Height="5*" />
             </Grid.RowDefinitions>
             <Button x:Name="Confirm" Content="Confirmar" Grid.Column="1" Grid.Row="1" Style="{StaticResource MenuButton}" Click="Confirm_Click"/>
-            <Button x:Name="Cancel" Content="Cancelar" Grid.Column="2" Grid.Row="1" Style="{StaticResource CloseButton}" Click="Cancel_Click"/>
+            <Button x:Name="Cancel" Content="Cancelar" Grid.Column="2" Grid.Row="1" Style="{StaticResource MenuButton}" Click="Cancel_Click"/>
         </Grid>
     </Grid>
 </Window>
