--- a/Gestion_AcademicoAdministrativa_Abastos/MainWindow.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/MainWindow.xaml
@@ -52,9 +52,15 @@
                     <ColumnDefinition Width="33*" />
                     <ColumnDefinition Width="33*" />
                 </Grid.ColumnDefinitions>
-                <Button Grid.Column="0" Content="-" Click="BtnMinimize_Click" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Style="{StaticResource MenuButton}" />
-                <Button Grid.Column="1" Content="□" Click="BtnMaximize_Click" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Style="{StaticResource MenuButton}" />
-                <Button Grid.Column="2" Content="×" Click="BtnCerrar_Click" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Style="{StaticResource CloseButton}" />
+                <Button Grid.Column="0" Content="-" Click="BtnMinimize_Click"
+                        HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
+                        Style="{StaticResource MenuButton}" FontSize="{StaticResource TitleFontSize}"/>
+                <Button Grid.Column="1" Content="□" Click="BtnMaximize_Click"
+                        HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
+                        Style="{StaticResource MenuButton}" FontSize="{StaticResource TitleFontSize}"/>
+                <Button Grid.Column="2" Content="×" Click="BtnCerrar_Click"
+                        HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
+                        Style="{StaticResource CloseButton}" FontSize="{StaticResource TitleFontSize}"/>
             </Grid>
         </Grid>
         <Grid Grid.Row="1" x:Name="WindowContent" Grid.ColumnSpan="2">
