--- a/Gestion_AcademicoAdministrativa_Abastos/Formularios/FichaPersona.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/Formularios/FichaPersona.xaml
@@ -67,6 +67,8 @@
                                     <RowDefinition Height="15*" />
                                     <RowDefinition Height="5*" />
                                     <RowDefinition Height="15*" />
+                                    <RowDefinition Height="5*" />
+                                    <RowDefinition Height="15*" />
                                     <RowDefinition Height="15*" />
                                 </Grid.RowDefinitions>
                                 <Grid Grid.Row="1" Grid.Column="1">
@@ -253,7 +255,65 @@
                                         </TextBlock.Style>
                                     </TextBlock>
                                 </Grid>
-                                <Grid Grid.Row="8" Grid.Column="1">
+                                <Grid Grid.Row="9" Grid.Column="1">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="20*" />
+                                        <ColumnDefinition Width="5*" />
+                                        <ColumnDefinition Width="35*" />
+                                        <ColumnDefinition Width="5*" />
+                                        <ColumnDefinition Width="35*" />
+                                    </Grid.ColumnDefinitions>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="35*" />
+                                        <RowDefinition Height="65*" />
+                                    </Grid.RowDefinitions>
+                                    <Label Content="{DynamicResource FormPersonaPuerta}" Grid.Column="0"/>
+                                    <TextBox x:Name="TxtCodigoPostal" Grid.Column="0" Grid.Row="1" />
+
+                                    <TextBlock Grid.Column="0" Grid.Row="1" Text="{DynamicResource FormPersonaPuertaExample}" >
+                                        <TextBlock.Style>
+                                            <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource PlaceHolderContent}">
+                                                <Setter Property="Visibility" Value="Collapsed"/>
+                                                <Style.Triggers>
+                                                    <DataTrigger Binding="{Binding Text, ElementName=TxtCodigoPostal}" Value="">
+                                                        <Setter Property="Visibility" Value="Visible"/>
+                                                    </DataTrigger>
+                                                </Style.Triggers>
+                                            </Style>
+                                        </TextBlock.Style>
+                                    </TextBlock>
+                                    <Label Content="{DynamicResource FormPersonaPuerta}" Grid.Column="2"/>
+                                    <TextBox x:Name="TxtProvincia" Grid.Column="2" Grid.Row="1" />
+
+                                    <TextBlock Grid.Column="2" Grid.Row="1" Text="{DynamicResource FormPersonaPuertaExample}" >
+                                        <TextBlock.Style>
+                                            <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource PlaceHolderContent}">
+                                                <Setter Property="Visibility" Value="Collapsed"/>
+                                                <Style.Triggers>
+                                                    <DataTrigger Binding="{Binding Text, ElementName=TxtProvincia}" Value="">
+                                                        <Setter Property="Visibility" Value="Visible"/>
+                                                    </DataTrigger>
+                                                </Style.Triggers>
+                                            </Style>
+                                        </TextBlock.Style>
+                                    </TextBlock>
+                                    <Label Content="{DynamicResource FormPersonaPuerta}" Grid.Column="4"/>
+                                    <TextBox x:Name="TxtLocalidad" Grid.Column="4" Grid.Row="1" />
+
+                                    <TextBlock Grid.Column="4" Grid.Row="1" Text="{DynamicResource FormPersonaPuertaExample}" >
+                                        <TextBlock.Style>
+                                            <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource PlaceHolderContent}">
+                                                <Setter Property="Visibility" Value="Collapsed"/>
+                                                <Style.Triggers>
+                                                    <DataTrigger Binding="{Binding Text, ElementName=TxtLocalidad}" Value="">
+                                                        <Setter Property="Visibility" Value="Visible"/>
+                                                    </DataTrigger>
+                                                </Style.Triggers>
+                                            </Style>
+                                        </TextBlock.Style>
+                                    </TextBlock>
+                                </Grid>
+                                <Grid Grid.Row="10" Grid.Column="1">
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="30*" />
                                         <ColumnDefinition Width="5*" />
