--- a/Gestion_AcademicoAdministrativa_Abastos/Formularios/FormularioAula.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/Formularios/FormularioAula.xaml
@@ -47,15 +47,14 @@
                                 </Grid.ColumnDefinitions>
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="5*" />
-                                    <RowDefinition Height="15*" />
-                                    <RowDefinition Height="15*" />
-                                    <RowDefinition Height="5*" />
-                                    <RowDefinition Height="15*" />
                                     <RowDefinition Height="10*" />
+                                    <RowDefinition Height="5*" />
+                                    <RowDefinition Height="20*" />
+                                    <RowDefinition Height="5*" />
                                     <RowDefinition Height="5*" />
                                 </Grid.RowDefinitions>
                                 <Label />
-                                <Grid Grid.Row="2" Grid.Column="1">
+                                <Grid Grid.Row="1" Grid.Column="1">
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="45*" />
                                         <ColumnDefinition Width="5*" />
@@ -97,6 +96,16 @@
                                         </TextBlock.Style>
                                     </TextBlock>
 
+                                </Grid>
+                                <Grid Grid.Row="3" Grid.Column="1">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="100*" />
+                                    </Grid.ColumnDefinitions>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="25*" />
+                                        <RowDefinition Height="75*" />
+                                    </Grid.RowDefinitions>
+                                    <DataGrid Grid.Row="1" />
                                 </Grid>
                                 <Grid Grid.Row="5" Grid.Column="1">
                                     <Grid.ColumnDefinitions>
